--- a/src/Components/HeroSection/Hero.css
+++ b/src/Components/HeroSection/Hero.css
@@ -17,21 +17,19 @@
   width: 10%;
 }
 #logo2{
+
     position: absolute;
     top: 60%;
     left: 50%;
     transform: translate(-50%,-50%);
     animation: fill 0.5s ease forwards 3.5s;
     width: 70%;
-    animation-name: animate;
-    animation-duration: 1.5s;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
+    text-shadow: 0px 0px 5px red;
 }
 @media screen and (max-width: 1000px){
   #logo{
     width: 90%;
- 
+    
     }
   #logo2{
    
@@ -44,8 +42,8 @@
 }
 @keyframes animate {
     0% {
-      filter: none
-      ;
+      filter: none;
+      color: black;
     }
   
     100% {
